# vdso_crate_template

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
api/: Cargo.toml  build.rs
api/src/: lib.rs
build_vdso/: Cargo.toml
build_vdso/src/: build_config.rs  gen_api.rs  gen_wrapper.rs  lib.rs  link.ld  link_no_segment.ld
config/src/: lib.rs
doc/: README_old.md  重新设计的模块结构.md
doc/assets/: vdso模板项目结构2.0.drawio  vdso模板项目结构3.0.drawio  重新设计的模块结构.md
doc/开发日志/: vdso模板重构-debug笔记.md
example/user_test/: Cargo.toml  build.rs
example/user_test/src/: main.rs  map.rs
example/vdso_example/: Cargo.toml
example/vdso_example/src/: api.rs
structs/src/: argument.rs  lib.rs  shared.rs
temp_test/: Cargo.toml
temp_test/src/: main.rs
user_test/: Cargo.toml  build.rs
user_test/src/: main.rs  map.rs
vdso/: Cargo.toml  build.rs
vdso/src/: api.rs  lib.rs
vdso_helper/: Cargo.toml
vdso_helper/src/: lib.rs  log_init.rs  mut_cfg.rs  trait_interface.rs  vvar_data.rs
