[workspace]
resolver = "2"
members = [
    "build_vdso",
    "example/user_test",
    "example/vdso_example",
    "vdso_helper",
]
exclude = ["output/libvdso", "output/vdso_wrapper"]

[workspace.package]
name = "vdso_crate_template"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
vdso_helper = { path = "vdso_helper" }
build_vdso = { path = "build_vdso" }
vdso_example = { path = "example/vdso_example" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
