[package]
name = "user_test"
version.workspace = true
edition.workspace = true

[dependencies]
memmap2 = "0.9.5"
log = "0.4"
env_logger = "0.9"
xmas-elf = "0.9.0"
elf_parser = { path = "../../async-os/crates/elf_parser" }
libc = "0.2"
page_table_entry = { git = "https://github.com/Starry-OS/page_table_entry.git" }
api = { workspace = true, features = ["log"] }
structs = { workspace = true }
config = { workspace = true }
