[package]
name = "vdso_helper"
license = "Apache-2.0"
description = "帮助开发vDSO的工具库"
homepage = "https://github.com/rosy233333/vdso_crate_template/blob/main/README.md"
documentation = "https://github.com/rosy233333/vdso_crate_template/blob/main/README.md"
repository = "https://github.com/rosy233333/vdso_crate_template"
readme = "../README.md"
version.workspace = true
edition.workspace = true

[dependencies]
hal = { git = "https://github.com/rosy233333/vsched_hal.git", package = "vsched_hal" }
lazyinit = "0.2"
paste = "1.0"
log = { version = "0.4", optional = true }

[features]
log = ["dep:log"]
default = []
