[package]
name = "user_test"
version.workspace = true
edition.workspace = true

[dependencies]
memmap2 = "0.9.5"
log = "0.4"
env_logger = "0.9"
xmas-elf = "0.9.0"
elf_parser = { git = "https://github.com/rosy233333/elf_parser.git" }
libc = "0.2"
page_table_entry = { git = "https://github.com/rosy233333/page_table_entry.git" }
include_bytes_aligned = "0.1.4"
libvdsoexample = { path = "../../output/libvdsoexample", features = ["log"] }

[build-dependencies]
build_vdso = { workspace = true }
